Reorder files in project

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "NodeMpc",
   "version": "0.0.1",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "a": "^0.4.6",
-    "require-from": "^0.10.0",
+    "should": "^4.3.0",
     "sinon": "^1.12.1"
   }
 }
