--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "dependencies": {},
   "devDependencies": {
     "a": "^0.4.6",
+    "istanbul": "^0.3.2",
+    "mocha": "^2.0.1",
+    "proxyquire": "^1.1.0",
+    "rewire": "^2.1.3",
     "should": "^4.3.0",
     "sinon": "^1.12.1"
+  },
+  "scripts": {
+    "start": "node --harmony index.js",
+    "test": "mocha"
   }
 }
