--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "NodeMpc",
   "version": "0.0.1",
-  "dependencies": {},
+  "dependencies": {
+    "winston": "^0.8.3"
+  },
   "devDependencies": {
     "a": "^0.4.6",
     "istanbul": "^0.3.2",
